# src/posts/validator.ts
@@ -1,13 +1,13 @@
-export function parseStringToNumber(postId: string, fileId: string) {
-  const result = { postIdNumb: Number(postId), fileIdNumb: Number(fileId) };
-  if (isNaN(result.postIdNumb) || isNaN(result.fileIdNumb)) {
+export function parseStringToNumber(id: string) {
+  const result = { id: Number(id) };
+  if (isNaN(result.id)) {
     throw {
-      message: "Error validate postId and fileId must be a number",
+      message: "Error validate id must be a number",
       statusCode: 400,
     };
   }
-  if (result.fileIdNumb === 0) {
-    result.fileIdNumb = null;
+  if (result.id === 0) {
+    result.id = null;
   }
   return result;
 }
